REGRESSION(r93390): Empty or invalid maxlength of an input tag should be ignored. https://bugs.webkit.org/show_bug.cgi?id=67015

Patch by Shinya Kawanaka <shinyak@google.com> on 2011-08-26
Reviewed by Kent Tamura.

Source/WebCore:

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::parseMaxLengthAttribute):
  Checks the validity of maxlength attribute when converting it to integer.

LayoutTests:

* fast/forms/input-text-paste-maxlength-expected.txt:
   Added maxlength="" and maxlength="invalid" tests.
* fast/forms/input-text-paste-maxlength.html: ditto.
* fast/forms/script-tests/textarea-maxlength.js: ditto.
* fast/forms/textarea-maxlength-expected.txt: ditto.

Canonical link: https://commits.webkit.org/82803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93858 268f45cc-cd09-0410-ab3c-d52691b4dbfc